packages/fiori/src/themes/ShellBar.css
/* ... */
.ui5-shellbar-root {
	position: relative;
	display: flex;
	justify-content: space-between;
	align-items: center;
	background: var(--sapShellColor);
	height: var(--_ui5_shellbar_root_height);
	font-family: "72override", var(--sapFontFamily);
	font-size: var(--sapFontSize);
	font-weight: normal;
	box-sizing: border-box;
}

.ui5-shellbar-menu-button,
.ui5-shellbar-button,
.ui5-shellbar-image-button,
::slotted([ui5-toggle-button][slot="assistant"]),
::slotted([ui5-button][slot="startButton"]) {
	height: 2.25rem;
	padding: 0;
	margin-inline-start: 0.5rem;
	border: 0.0625rem solid var(--sapButton_Lite_BorderColor);
	background: var(--sapButton_Lite_Background);
	outline-color: var(--_ui5_shellbar_logo_outline_color);
	color: var(--sapShell_TextColor);
	box-sizing: border-box;
	cursor: pointer;
	border-radius: var(--_ui5_shellbar_button_border_radius);
	position: relative;
	font-size: 0.75rem;
	font-weight: bold;
	white-space: initial;
	overflow: initial;
	text-overflow: initial;
	line-height: inherit;
	letter-spacing: inherit;
	word-spacing: inherit;
}

::slotted([ui5-button][slot="startButton"]) {
	margin-inline-start: 0;
}

::slotted([ui5-toggle-button][slot="assistant"]:hover),
::slotted([ui5-button][slot="startButton"]:hover),
.ui5-shellbar-menu-button.ui5-shellbar-menu-button--interactive:hover,
.ui5-shellbar-button:hover,
.ui5-shellbar-image-button:hover {
	background: var(--sapShell_Hover_Background);
	border-color: var(--sapButton_Lite_Hover_BorderColor);
	color: var(--sapShell_TextColor);
}

::slotted([ui5-toggle-button][slot="assistant"][pressed]),
::slotted([ui5-toggle-button][slot="assistant"][pressed]:hover:not([active])) {
	color: var(--sapShell_Assistant_ForegroundColor);
}

::slotted([ui5-toggle-button][slot="assistant"][active]),
::slotted([ui5-button][slot="startButton"][active]),
.ui5-shellbar-menu-button.ui5-shellbar-menu-button--interactive:active,
.ui5-shellbar-button[active],
.ui5-shellbar-image-button:active {
	background: var(--sapShell_Active_Background);
	border-color: var(--sapButton_Lite_Active_BorderColor);
	color: var(--_ui5_shellbar_button_active_color);
}

:host([desktop]) .ui5-shellbar-menu-button.ui5-shellbar-menu-button--interactive:focus,
.ui5-shellbar-menu-button.ui5-shellbar-menu-button--interactive:focus-visible {
	outline: var(--_ui5_shellbar_logo_outline);
	outline-offset: var(--_ui5_shellbar_outline_offset);
}

slot[name="profile"] {
	min-width: 0;
}

::slotted([ui5-avatar][slot="profile"]) {
	min-width: 0;
	width: 2rem;
	height: 2rem;
	min-height: 2rem;
	padding: .25rem;
	pointer-events: none;
}

.ui5-shellbar-menu-button.ui5-shellbar-menu-button--interactive::-moz-focus-inner {
	border: none;
}

.ui5-shellbar-menu-button-arrow,
.ui5-shellbar-menu-button-title,
.ui5-shellbar-title {
	display: inline-block;
	font-family: "72override", var(--sapFontFamily);
	margin: 0;
	font-size: var(--_ui5_shellbar_menu_button_title_font_size);
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	color: var(--sapShell_TextColor);
}

:host(:not([primary-title])) .ui5-shellbar-menu-button {
	min-width: 2.25rem;
	justify-content: center;
}

.ui5-shellbar-secondary-title {
	display: inline-block;
	font-size: var(--sapFontSmallSize);
	color: var(--sapShell_TextColor);
	line-height: 1rem;
	font-weight: normal;
	text-overflow: ellipsis;
	white-space: nowrap;
	overflow: hidden;
}

.ui5-shellbar-menu-button--interactive .ui5-shellbar-menu-button-arrow {
	margin-inline-start: 0.375rem;
}

.ui5-shellbar-overflow-container {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100%;
	overflow: hidden;
}

.ui5-shellbar-overflow-container-middle {
	align-self: center;
	height: var(--_ui5_shellbar_overflow_container_middle_height);
	width: 0;
	flex-shrink: 0;
	width: 7.5rem;
}

.ui5-shellbar-mid-content {
	height: var(--_ui5_shellbar_overflow_container_middle_height);
	width: 33.4%;
}

.ui5-shellbar-overflow-container-left:has(+ .ui5-shellbar-mid-content) {
	width: 33.3%;
}

.ui5-shellbar-mid-content + .ui5-shellbar-overflow-container-right {
	width: 33.3%;
}

:host([breakpoint-size="S"]) .ui5-shellbar-overflow-container-middle {
	width: 0;
}

:host([breakpoint-size="XXL"]) .ui5-shellbar-with-searchfield .ui5-shellbar-overflow-container-middle {
	width: 35rem;
}

:host([breakpoint-size="S"]) .ui5-shellbar-overflow-container-left {
	flex-shrink: 0;
}

:host([breakpoint-size="S"]) .ui5-shellbar-menu-button {
	margin-inline-start: 0;
}

:host([breakpoint-size="S"]) .ui5-shellbar-root {
	padding: 0 1rem;
}

:host([breakpoint-size="S"]) .ui5-shellbar-search-full-width-wrapper {
	padding: 0 1rem;
}

:host([breakpoint-size="M"]) .ui5-shellbar-root {
	padding: 0 2rem;
}

:host([breakpoint-size="M"]) .ui5-shellbar-search-full-width-wrapper {
	padding: 0 2rem;
}

:host([breakpoint-size="L"]) .ui5-shellbar-root {
	padding: 0 2rem;
}

:host([breakpoint-size="XL"]) .ui5-shellbar-root {
	padding: 0 3rem;
}

:host([breakpoint-size="XXL"]) .ui5-shellbar-root {
	padding: 0 3rem;
}

.ui5-shellbar-logo {
	cursor: pointer;
	padding: .25rem;
	max-height: 2rem;
}

:host([desktop]) .ui5-shellbar-logo:focus,
.ui5-shellbar-logo:focus-visible {
	outline: var(--_ui5_shellbar_logo_outline);
	outline-offset: var(--_ui5_shellbar_logo_outline_offset);
	border-radius: var(--_ui5_shellbar_logo_border_radius);
}

.ui5-shellbar-logo:hover {
	box-shadow: var(--_ui5_shellbar_button_box_shadow);
	border-radius: var(--_ui5_shellbar_logo_border_radius);
}

.ui5-shellbar-menu-button.ui5-shellbar-menu-button--interactive:hover {
	box-shadow: var(--_ui5_shellbar_button_box_shadow);
}

.ui5-shellbar-menu-button.ui5-shellbar-menu-button--interactive:active {
	box-shadow: var(--_ui5_shellbar_button_box_shadow_active);
}

.ui5-shellbar-menu-button.ui5-shellbar-menu-button--interactive:active .ui5-shellbar-menu-button-arrow,
.ui5-shellbar-menu-button.ui5-shellbar-menu-button--interactive:active .ui5-shellbar-menu-button-title {
	color: var(--sapShell_Active_TextColor);
}
/* ... */

